Fixes an issue where un-viewed qustions could cause the inline nav buttons on the page to be pushed away from the bottom, leaving a large amount of whitespace

--- a/ObojoboDraft/Chunks/Question/viewer-component.scss
+++ b/ObojoboDraft/Chunks/Question/viewer-component.scss
@@ -78,6 +78,7 @@
 	&.is-hidden .flipper {
 		border: 1px solid $color-action;
 		max-height: 15em;
+		overflow: hidden;
 	}
 
 	&.is-mode-practice {
